--- a/flappy.html
+++ b/flappy.html
@@ -1,1 +1,6 @@
-<!doctype html><html><body><h2>Flappy Placeholder</h2></body></html>
+<div class="game-tabs">
+  <button class="gbtn" onclick="setGame('games/dino.html')">Dino</button>
+  <button class="gbtn" onclick="setGame('games/tetris.html')">Tetris</button>
+  <button class="gbtn" onclick="setGame('games/flappy.html')">Flappy</button>
+</div>
+<iframe id="gameFrame" class="game-frame" src="games/dino.html"></iframe>
